--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -40,5 +40,6 @@ dependencies {
     implementation "com.android.support:cardview-v7:$androidSupportVersion"
     implementation 'com.squareup.okhttp3:okhttp:3.1.2'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    compile files('libs/volley.jar')
+    implementation 'com.android.support:design:25.4.0'
+    implementation files('libs/volley.jar')
 }
